--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ I used to be so frustrated with the aftermath of my ordered products, but with B
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
